--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="moe.feng.common.eventshelper">
+    package="moe.feng.common.eventshelper.sample">
 
     <application
         android:allowBackup="true"
