--- a/events-compiler/build.gradle
+++ b/events-compiler/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation project(":events-annotation")
+    implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.11.1'
 }
