Add safe check & thread annotations
Signed-off-by: Fung Gwo <fython@163.com>

--- a/events-annotation/build.gradle
+++ b/events-annotation/build.gradle
@@ -1,8 +1,35 @@
 apply plugin: 'java-library'
 
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
 dependencies {
     implementation 'androidx.annotation:annotation:1.0.2'
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+ext {
+    publishedGroupId = 'moe.feng.common.eventshelper'
+
+    bintrayRepo = 'EventsHelper'
+    bintrayName = project.name
+
+    libraryName = 'EventsHelper Annotations'
+    artifact = project.name
+
+    libraryDescription = 'EventsHelper Annotations'
+
+    siteUrl = 'https://github.com/fython/EventsHelper'
+    gitUrl = 'https://github.com/fython/EventsHelper.git'
+
+    libraryVersion = project.rootProject.version
+
+    developerId = 'fython'
+    developerName = 'Fung Gwo'
+    developerEmail = 'fythonx@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: project.rootProject.file('bintray.gradle')
