--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+group 'moe.feng.common.eventshelper'
+version '1.0.0-alpha2'
+
 buildscript {
     repositories {
         google()
@@ -6,6 +9,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
 
@@ -13,7 +18,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
     }
 }
 
