--- a/events-compiler/build.gradle
+++ b/events-compiler/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java-library'
 
+sourceCompatibility = "1.8"
+targetCompatibility = "1.8"
+
 dependencies {
     implementation project(":events-annotation")
     implementation 'androidx.annotation:annotation:1.0.2'
@@ -7,5 +10,29 @@ dependencies {
     implementation 'com.squareup:javapoet:1.11.1'
 }
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+ext {
+    publishedGroupId = 'moe.feng.common.eventshelper'
+
+    bintrayRepo = 'EventsHelper'
+    bintrayName = project.name
+
+    libraryName = 'EventsHelper Annotation Compiler'
+    artifact = project.name
+
+    libraryDescription = 'EventsHelper Annotation Compiler'
+
+    siteUrl = 'https://github.com/fython/EventsHelper'
+    gitUrl = 'https://github.com/fython/EventsHelper.git'
+
+    libraryVersion = project.rootProject.version
+
+    developerId = 'fython'
+    developerName = 'Fung Gwo'
+    developerEmail = 'fythonx@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+apply from: project.rootProject.file('bintray.gradle')
