--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,18 @@
 group 'moe.feng.common.eventshelper'
-version '1.0.0-alpha2'
+version '1.0.0-alpha3'
 
 buildscript {
+    ext.kotlin_version = '1.3.31'
+
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -18,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://www.jitpack.io" }
     }
 }
 
