--- a/events-compiler/build.gradle
+++ b/events-compiler/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'java-library'
+apply plugin: 'kotlin'
 
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
@@ -8,6 +8,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.11.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation 'com.github.agrosner:KPoet:1.0.0'
 }
 
 ext {
